# ParquetKit

./: .gitignore  .spi.yml  .swift-format  CHANGELOG.md  NOTICE  Package.resolved  Package.swift  README.md
.github/workflows/: build-release.yml  ci.yml  release-please.yml
Driver/: Cargo.toml  rust-toolchain.toml  uniffi.toml
Driver/src/: lib.rs  reader.rs  schema.rs  tests.rs  value.rs  writer.rs
Driver/tests/: round_trip.rs
Snippets/: Decimal128ConstructionUsage.swift  Decimal128Usage.swift  FieldSchemaManualUsage.swift  FieldSchemaMapUsage.swift  FieldSchemaStructUsage.swift  GettingStarted.swift  ParquetColumnUsage.swift  ParquetFloat16Usage.swift  ParquetIgnoredUsage.swift  ParquetIntervalUsage.swift  ParquetMacroUsage.swift  ParquetReaderConfigurationUsage.swift  ParquetReaderUsage.swift  ParquetTimestampUsage.swift  ParquetWriterConfigurationUsage.swift  ParquetWriterUsage.swift
Sources/ParquetKit/: Configuration.swift  Errors.swift  Macros.swift  ParquetCodable.swift  ParquetDecoder.swift  ParquetEncoder.swift  ParquetReader.swift  ParquetReaderConfiguration.swift  ParquetWriter.swift  Schema.swift  ValueTypes.swift
Sources/ParquetKit/Documentation.docc/: ParquetKit.md
Sources/ParquetKitFFI/: ParquetKitFFI.swift  ParquetKitRustDriver.h  ParquetKitRustDriver.modulemap  parquet_swift.swift  parquet_swiftFFI.h  parquet_swiftFFI.modulemap
Sources/ParquetKitMacros/: ParquetMacro.swift  PeerMacros.swift  Plugin.swift
Tests/MacroExpansionTests/: ParquetMacroTests.swift
Tests/ParquetKitTests/: CollectionTests.swift  ConfigurationTests.swift  ErrorTests.swift  Fixtures.swift  MacroTests.swift  PrimitiveTests.swift  SchemaEvolutionTests.swift  TemporalTests.swift
scripts/: auto-format  build-docs  build-xcframework  check-binary-freshness  check-bindings-sync  pre-commit  preview-docs  run-tests  update-notice  use-local-binary
