[package]
name = "parquetkit-driver"
version = "0.0.0"
edition = "2024"

[lib]
name = "parquetkit_driver"
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi_bindgen.rs"

[dependencies]
arrow-array = "58.1.0"
half = "2.1"
arrow-schema = "58.1.0"
parquet = { version = "58.1.0", default-features = false, features = [
  "arrow",
  "arrow_canonical_extension_types",
  "brotli",
  "flate2",
  "flate2-zlib-rs",
  "lz4",
  "zstd",
  "snap",
  "crc",
] }
thiserror = "2"
uniffi = { version = "0.31.0", features = ["cli"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
